[PN-15709] feat: copied and adapted TestIT related to workflow domain